Update title tag in the index.html Rename $PADDING to $MAIN_PADDING in _vars.scss Fix the styles of the sort modal window to make it stretch to fill the screen without the scrollbar Update InputSort.js to wrap it up in a div element Create detailed view of the user block: update UserBlock.js and UserBlock.module.scss Remove redundant department prop from the UserBlock.js Add star.svg, phone.svg and back.svg files

--- a/src/blocks/InputBlock/InputBlock.module.scss
+++ b/src/blocks/InputBlock/InputBlock.module.scss
@@ -3,7 +3,7 @@
 
 .InputBlock {
     width: 100%;
-    padding: vars.$PADDING;
+    padding: vars.$MAIN_PADDING;
     padding-bottom: 0;
     display: flex;
     flex-direction: column;
