--- a/src/blocks/InputSort/InputSort.module.scss
+++ b/src/blocks/InputSort/InputSort.module.scss
@@ -15,8 +15,8 @@ $CLOSE_HEIGHT: 24px;
     position: fixed;
     left: 0;
     top: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     background-color: colors.$BG_TRANSPARENT;
     display: flex;
     justify-content: center;
