--- a/src/blocks/OutputBlock/OutputBlock.module.scss
+++ b/src/blocks/OutputBlock/OutputBlock.module.scss
@@ -4,7 +4,7 @@
 .OutputBlock {
     flex-grow: 1;
     min-height: 100%;
-    padding: vars.$PADDING;
+    padding: vars.$MAIN_PADDING;
     padding-top: 22px;
     display: flex;
     flex-direction: column;
